# blackbird

./: .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  Dioxus.toml  LICENSE.md  README.md  TODO.md
assets/: config.env  mostra.css
docs/: IOS_DEPLOYMENT.md
docs/saved/: picilarag-tuscan-thickspaghetti-with-a-h-1759069837.md
scripts/: setup-ios.sh
src/: ai.rs  bridge.rs  lib.rs  main.rs  theme.rs  types.rs  ui.rs
src/ai/: blackbird.rs  client.rs  custom.rs  mod.rs  ollama.rs
src/ai/providers/: blackbird.rs  mod.rs
src/tools/: apps.rs  calculator.rs  docs.rs  mod.rs  settings.rs
src/views/: apps.rs  chat.rs  docs.rs  mod.rs  settings.rs  shared.rs  workbench.rs
tests/: bridge_tests.rs
