[package]
name = "blackbird"
version = "0.1.0"
authors = ["Alessandro Joabar <ale@joabar.ai>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Conditional dependencies for different platforms
dioxus = { version = "0.6.0", optional = true }
dioxus-signals = { version = "0.6.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
arboard = "3"
dotenvy = "0.15"
time = { version = "0.3", features = ["macros", "formatting", "local-offset"] }
comrak = { version = "0.23", features = ["syntect"] }

# Rig - AI framework for LLM applications
rig-core = "0.23"
anyhow = "1.0"
thiserror = "2.0"
async-trait = "0.1"

# Math evaluation for calculator tool
fasteval = "0.2"

# Async utilities
futures = "0.3"

# Cross-platform directories
dirs = "5"

# HTTP client for Blackbird endpoint
reqwest = { version = "0.12", features = ["json", "stream"] }

[dev-dependencies]

[features]
default = ["mobile"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
